Resources/Adding StdDev and BoxPlots/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_ed_altergo.txt
[kernel] Parsing ed_rte.c (with preprocessing)
[kernel] ed_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing ed.c (with preprocessing)
  3     [kernel:typing:implicit-function-declaration] ed.c:3: Warning:
[kernel] Frama-C aborted: invalid user input.
